# hashmap_core

./: .travis.yml  Cargo.toml  README.md
src/: fnv.rs  lib.rs  map.rs  set.rs  table.rs
